Added all classes without body

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,5 @@
+/Aposta.class
+/Cenario.class
 /FacadeController.class
 /GeneralController.class
-/Cenario.class
-/Aposta.class
+/CenarioBonus.class
